[package]
name = "home-easy"
version = "0.2.0"
authors = ["Nicolas Senaud <nicolas@senaud.fr>"]
description = "Simple Rust home-easy protocol implementation"
edition = "2018"

repository = "https://github.com/NSenaud/home-easy-rs"
readme = "README.md"
keywords = ["home-automation", "rpi", "gpio"]
categories = ["embedded", "hardware-support", "command-line-utilities"]
license-file = "LICENSE"

[badges]
travis-ci = { repository = "NSenaud/home-easy-rs", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
clap = "2.26"
libc = "0.2.77"
log = "0.3.8"
log4rs = "0.7.0"
rppal = "0.11.3"
